# project1_Zasorin_Evgeniy_Sergeevich

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: __init__.py  constants.py  main.py  player_actions.py  utils.py
